2009-04-30  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Simon Hausmann.

        Implement encloseContentsWith and rename wrap to encloseWith.

        Also in encloseWith, make sure that you cannot enclose with
        non-enclosable elements.

        * Api/qwebelement.cpp:
        (QWebElement::encloseContentsWith):
        (QWebElement::encloseWith):
        * Api/qwebelement.h:
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::encloseContentsWith):
        (tst_QWebElement::encloseWith):

2009-04-30  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Darin Adler.

        The Qt API exposes a global history patch CSSStyleSelector to make API consumers work again

        https://bugs.webkit.org/show_bug.cgi?id=20952

        The QtWebKit port made the mistake of exposing a global history. This broke
        with the addition of PageGroup and LinkHash. This needs to be repaired
        for Qt4.5.

        Add a function to LinkHash.cpp that is resolving a URL. Use this
        function from within CSSStyleSelector to forward the url to the
        QWebHistoryInterface API.

        It is sad that there is a path within visitedLinkHash which is now
        doing a memcpy, it is sad to add a PLATFORM(QT) define to CSSStyleSelector
        and using QtWebKit types within WebCore is a layering violation as well.

        PageGroup::setShouldTrackVisitedLinks is currently not enabled. For
        Qt4.6 a second version of the QWebHistoryInterface is going to be
        added which will fix things up.

        * Api/qwebhistoryinterface.cpp:
        (QWebHistoryInterface::setDefaultInterface): Add note for Qt4.6
        * Api/qwebpage.cpp: Remove PageGroup::setShouldTrackVisitedLinks(true)
        (QWebPagePrivate::QWebPagePrivate):
        * tests/qwebhistoryinterface/qwebhistoryinterface.pro: Added unit test.