@@ -83,8 +83,8 @@ namespace WebCore {
 
         virtual void setResizable(bool);
 
-        virtual void addMessageToConsole(const String& message, unsigned int lineNumber,
-                                         const String& sourceID);
+        virtual void addMessageToConsole(MessageSource, MessageLevel, const String& message,
+                                         unsigned int lineNumber, const String& sourceID);
 
         virtual bool canRunBeforeUnloadConfirmPanel();
         virtual bool runBeforeUnloadConfirmPanel(const String& message, Frame* frame);
